fixing project structure...